# lib/db/src/schema/index.ts
@@ -6,3 +6,5 @@ export * from "./budget_projects";
 export * from "./notifications";
 export * from "./activity";
 export * from "./sos_events";
+export * from "./conversations";
+export * from "./messages";
